# brandkit

./: .gitignore  App_log.md  App_vrf.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  render.yaml  testing_sequence.md  types.ts  vite.config.ts  vitest.config.ts
api/: suggest-palette.js
components/: ColorChecker_log.md  ColorChecker_vrf.tsx  FontLibrary_log.md  FontLibrary_vrf.tsx  OrchestrationTerminal_vrf.tsx  PaletteOnly_vrf.tsx  Sidebar_log.md  Sidebar_vrf.tsx  SuggestedFonts_log.md  SuggestedFonts_vrf.tsx  VoiceRewriter_log.md  VoiceRewriter_vrf.tsx
components/GuideGenerator/: ColorSwatch_log.md  ColorSwatch_vrf.tsx  ContrastChecks_log.md  ContrastChecks_vrf.tsx  GuideGenerator_log.md  GuideLogo_vrf.tsx  GuidePalette_vrf.tsx  GuideTOC_vrf.tsx  GuideView_log.md  GuideView_vrf.tsx  Icons_log.md  Icons_vrf.tsx  PaletteRamps_vrf.tsx  (+7 more)
data/: font_names_vrf.ts  fonts_log.md  fonts_sources_vrf.ts  fonts_vrf.ts
docs/: fonts_sources_vrf.md
server-rust/: .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  start.sh
server-rust/src/: adapters.rs  adapters_log.md  main.rs  main_log.md  models.rs  models_log.md  prompts.rs  prompts_log.md  routes.rs  routes_log.md
server-rust/src/adapters/: cascade.rs  cascade_v2.rs  gemini.rs  gemini_log.md  mock.rs  openai.rs  schemas.rs  schemas_log.md
server-rust/src/agents/: analysis.rs  json.rs  json_agent.rs  mod.rs  orchestrator.rs
services/: aiClient_log.md  aiClient_vrf.ts
utils/: color_log.md  color_vrf.test.ts  color_vrf.ts  image_vrf.ts  ramps_vrf.ts
(+54 files in other folders)
